tests/testerina-integration-test/src/test/resources/command-outputs/unix/DataProviderTest-testValidDataProviderWithAfterFailing.txt
Compiling source
	intg_tests/dataproviders:0.0.0
WARNING [tests/new-data-provider-tests.bal:(121:9,121:21)] unused variable 'a' (BCE20403)
    |
121 |         int a = 9/0;
    |         ^^^^^^^^^^^^

WARNING [tests/new-data-provider-tests.bal:(153:9,153:21)] unused variable 'a' (BCE20403)
    |
153 |         int a = 9/0;
    |         ^^^^^^^^^^^^


Running Tests with Coverage

	dataproviders
	[fail] [after test function for the test]:
	    error("{ballerina}DivisionByZero",message=" / by zero")
			callableName: afterFailsFunction moduleName: intg_tests.dataproviders$test.0.tests.new-data-provider-tests fileName: tests/new-data-provider-tests.bal lineNumber: 153
			callableName: afterFailsFunction$lambda72$ moduleName: intg_tests.dataproviders$test.0.tests.new-data-provider-tests fileName: tests/new-data-provider-tests.bal lineNumber: 160
		

		Test execution time :*****ms

		[pass] testDividingValuesWithAfterFailing#0
		[pass] testDividingValuesWithAfterFailing#1
		[pass] testDividingValuesWithAfterFailing#2
		[pass] testDividingValuesWithAfterFailing#3
		[pass] testDividingValuesWithAfterFailing#4
		[pass] testExecutionOfAfterFailing


		6 passing
		0 failing
		0 skipped

	dataproviders.module1

		Test execution time :*****ms



		No tests found

Generating Test Report
	data-providers/target/report/test_results.json

error: there are test failures